Fixed invisible settings button

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,11 @@
 #container a {
   text-decoration: none;
 }
+
+ion-button {
+  --background: #f4f4f4; 
+  --border-color: #ccc; 
+  --color: #000;        
+  border-radius: 5px;  
+
+}
